[package]
name = "collat-mezo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "collat_mezo"

[features]
default = ["init-if-needed"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"

